--- a/back/.env
+++ b/back/.env
@@ -24,9 +24,9 @@ APP_SECRET=
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-#DATABASE_URL="mysql://root:@127.0.0.1:3306/kanda1?serverVersion=8.0.32&charset=utf8mb4"#Local 
+DATABASE_URL="mysql://root:@127.0.0.1:3306/kanda?serverVersion=8.0.32&charset=utf8mb4"#Local 
 #DATABASE_URL="mysql://sql7763577:6VSXnR1Q6u@sql7.freesqldatabase.com:3306/sql7763577?serverVersion=8.0.32&charset=utf8mb4"#freesql
-DATABASE_URL="mysql://root:lltSqXdfpgKzvWVZxIQLCRrVUlcBlJJT@switchyard.proxy.rlwy.net:25891/railway" #♥Railway
+#DATABASE_URL="mysql://root:lltSqXdfpgKzvWVZxIQLCRrVUlcBlJJT@switchyard.proxy.rlwy.net:25891/railway" #♥Railway
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
