--- a/back/config/packages/nelmio_cors.yaml
+++ b/back/config/packages/nelmio_cors.yaml
@@ -1,13 +1,13 @@
 nelmio_cors:
     defaults:
         allow_credentials: true
-        allow_origin: ['http://127.0.0.1:3000']  # Autoriser uniquement ton frontend
-        allow_headers: ['Content-Type', 'Authorization']  # Autoriser ces en-têtes
-        allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']  # Autoriser ces méthodes
+        allow_origin: ['http://localhost:3000', 'http://127.0.0.1:3000']
+        allow_headers: ['Content-Type', 'Authorization']
+        allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
         max_age: 3600
     paths:
-        '^/api/':  # Appliquer la configuration CORS uniquement pour les routes qui commencent par /api
-            allow_origin: ['http://127.0.0.1:3000']  # Autoriser uniquement ton frontend (même si ce n'est pas strictement nécessaire ici, ça ajoute de la sécurité)
-            allow_headers: ['Content-Type', 'Authorization']  # Garde les mêmes en-têtes ici
-            allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']  # Les mêmes méthodes que dans defaults
+        '^/api/':
+            allow_origin: ['http://localhost:3000', 'http://127.0.0.1:3000']
+            allow_headers: ['Content-Type', 'Authorization']
+            allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
             max_age: 3600
