--- a/front/package.json
+++ b/front/package.json
@@ -42,7 +42,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
-    "@react-three/fiber": "^8.18.0",
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.1",
@@ -55,12 +56,12 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
-    "next": "15.1.3",
+    "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.16.0",
@@ -71,6 +72,7 @@
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.175.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
@@ -78,8 +80,9 @@
     "@eslint/eslintrc": "^3",
     "@types/bootstrap": "^5.2.10",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
+    "@types/three": "^0.148.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
